WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298175
REGRESSION (
299147@main
): [ Sequoia x86_64 Debug ] http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=298175
Summary
REGRESSION ( 299147@main): [ Sequoia x86_64 Debug ] http/tests/webgpu/webgpu...
Jay Stfleur
Reported
2025-08-31 14:04:33 PDT
Description: http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state.html Test is consistently crashing on WK2 Sequoia x86_64 Debug after changes introduced
299147@main
. History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fwebgpu%2Fwebgpu%2Fapi%2Fvalidation%2Frender_pipeline%2Ffragment_state.html&architecture=x86_64
Diff/Image Diff/Crash Log: No crash log were produced. Not able to reproduced using commands as follow: rwt --debug --verbose http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state.html
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-08-31 14:25:52 PDT
Test gardening commit
299378@main
(59e78b050fae): <
https://commits.webkit.org/299378@main
> Reviewed commits have been landed. Closing PR #50127 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-09-02 19:21:44 PDT
<
rdar://problem/159719141
>
Mike Wyrzykowski
Comment 3
2025-09-03 11:49:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50254
EWS
Comment 4
2025-09-04 11:43:15 PDT
Committed
299569@main
(c93109a06f8c): <
https://commits.webkit.org/299569@main
> Reviewed commits have been landed. Closing PR #50254 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug