REGRESSION ( 299147@main): [  Sequoia x86_64 Debug ] http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state.html is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=298175 rdar://159719141

Reviewed by Tadeu Zagallo.

Post commit shows crashes with some tier1 formats on Intel.

Limit feature to Apple Silicon Macs, iOS, and visionOS devices.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseFeatures):

Canonical link: https://commits.webkit.org/299569@main